# Django-Next-Tutorial

./: .gitignore  README.md
backend/: .env  db.sqlite3  pyproject.toml
backend/apps/account/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/account/migrations/: 0001_initial.py  0002_alter_user_iamge.py  0003_alter_user_iamge.py  0004_rename_iamge_user_image.py
backend/apps/app/: admin.py  models.py  serializers.py  urls.py  views.py
backend/apps/app/migrations/: 0001_initial.py
backend/apps/group_member/: apps.py
backend/apps/label/: apps.py
backend/server/: settings.py  urls.py
frontsite/: package-lock.json  package.json  store.js  tailwind.config.js  tsconfig.json
frontsite/components/: Layout.js  Navigation.js
frontsite/pages/: _app.js  index.js
frontsite/reducers/: auth.js  index.js
